# manifest-dir-macros

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: example.rs
src/: functions.rs  join_builder.rs  lib.rs
