[package]
name = "manifest-dir-macros"
version = "0.1.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/manifest-dir-macros"
homepage = "https://magiclen.org/manifest-dir-macros"
keywords = ["CARGO_MANIFEST_DIR", "directory", "project", "root"]
categories = ["no-std", "rust-patterns"]
description = "This crate provides function-like macros to check or operate paths relative to CARGO_MANIFEST_DIR at compile time."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
once_cell = "1"

proc-macro2 = "1"
syn = "1"
quote = "1"

mime_guess = { version = "2", optional = true }

[features]
default = ["replace-separator"]
replace-separator = []
tuple = ["syn/full"]